refactor(core) delete file and update parent pom