@@ -1,7 +1,5 @@
 package com.limbo.practice.core.util;
 
-import sun.misc.BASE64Decoder;
-
 import java.io.Serializable;
 import java.io.UnsupportedEncodingException;
 import java.util.*;
@@ -95,8 +93,9 @@ public class StringUtils extends org.apache.commons.lang.StringUtils {
      */
     public static int indexOf(String baseStr, String[] strings) {
 
-        if (null == baseStr || baseStr.length() == 0 || null == strings)
+        if (null == baseStr || baseStr.length() == 0 || null == strings) {
             return 0;
+        }
 
         int i = 0;
         for (String string : strings) {
@@ -164,8 +163,10 @@ public class StringUtils extends org.apache.commons.lang.StringUtils {
      * @return
      */
     public static String getBASE64(String str, boolean... bf) {
-        if (StringUtils.isBlank(str)) return null;
-        String base64 = new sun.misc.BASE64Encoder().encode(str.getBytes());
+        if (StringUtils.isBlank(str)) {
+            return null;
+        }
+        String base64 = Base64.getEncoder().encodeToString(str.getBytes());
         //去掉 '='
         if (isBlank(bf) && bf[0]) {
             base64 = base64.replaceAll("=", "");
@@ -177,10 +178,12 @@ public class StringUtils extends org.apache.commons.lang.StringUtils {
      * 将 BASE64 编码的字符串 s 进行解码
      **/
     public static String getStrByBASE64(String s) {
-        if (isBlank(s)) return "";
-        BASE64Decoder decoder = new BASE64Decoder();
+        if (isBlank(s)) {
+            return "";
+        }
+        Base64.Decoder decoder = Base64.getDecoder();
         try {
-            byte[] b = decoder.decodeBuffer(s);
+            byte[] b = decoder.decode(s);
             return new String(b);
         } catch (Exception e) {
             return "";
